# data_dojo

./: .gitignore  Aide mémoire python.ipynb  Makefile  Readme.md  pyproject.toml  requirements.yml
premiere_seance/: Cas simples.ipynb  Classification vins arbre de décision.ipynb  Classification vins k plus proches voisins.ipynb  Introduction au python.ipynb  Modèles de base.ipynb
seconde_seance/: Correction Modèles Avancés.ipynb  Modèles avancés.ipynb  movies.ipynb
