[tool.poetry]
name = "data-dojo"
version = "1.1.0"
description = "Machine Learning introductive training"
authors = ["Landeau Victor <vlandeau@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7"
jupyterlab = "2.2.8"
pandas = "1.1.2"
seaborn = "0.11.0"
graphviz = "0.14.1"
plotly = "2.7.0"
scikit-learn = "0.23.2"
