[tool.poetry]
name = "data-dojo"
version = "1.1.0"
description = "Machine Learning introductive training"
authors = ["Landeau Victor <vlandeau@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "2.2.10"
pandas = "1.1.2"
seaborn = "0.11.0"
plotly = "2.7.0"
scikit-learn = "0.23.2"
jupytext = "^1.11.1"
graphviz = "^0.17"
